trunk/Archive2/01/7ae16ee3c6e235/output
main.cpp:1:1: error: expected unqualified-id before numeric constant
 128         struct outItem {
 ^
main.cpp:6:1: error: expected unqualified-id before numeric constant
 133         ASSERT_IS_NOTHROW_CONSTRUCTIBLE(outItem);
 ^
main.cpp:9:1: error: expected unqualified-id before numeric constant
 180         static outItem firstOfAKind(TokenRecordHolder&& in){
 ^
